feat: firebase login and registration by email added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <main class="container">
 <header class="head">
-  <div class="head__logo"><a href="/home">offerBook</a></div>
+  <div class="head__logo"><a href="">offerBook</a></div>
   <div class="head__main-toggle">
     <a class head__toggle-section>Купить</a>
-    <a class head__toggle-section>Продатccccь</a>
+    <a class head__toggle-section>Продать</a>
   </div>
-  <div class="head__login">тут будет по логинам все</div>
+  <div class="head__login">
+    <button (click)="signOut()">Выйти</button>
+  </div>
 </header>
 <router-outlet></router-outlet>
 </main> 
