--- a/src/app/features/login/email/email.component.html
+++ b/src/app/features/login/email/email.component.html
@@ -1,11 +1,11 @@
-<form >
+<form [formGroup]='logInForm'>
     <mat-form-field>
         <mat-label >Введи Email</mat-label>
-        <input matInput type="text">
+        <input matInput type="text" formControlName="email">
     </mat-form-field>
     <mat-form-field>
         <mat-label>Введи пароль</mat-label>
-        <input matInput type="text">
+        <input matInput type="text" formControlName="password">
     </mat-form-field>
-    <button mat-button type="submit">Send</button>
+    <button mat-button type="submit" (click)="signIn()">Send</button>
 </form>
