--- a/src/app/features/login/email/email.component.html
+++ b/src/app/features/login/email/email.component.html
@@ -7,6 +7,10 @@
         <mat-label>Введи пароль</mat-label>
         <input matInput type="text" formControlName="password">
     </mat-form-field>
-    <button mat-button type="submit" (click)="signIn()">Send</button>
+    <div class="email-form__buttons">
+        <button  class="email-form__login-btn" mat-button type="submit" (click)="signIn()">Войти</button>
+        <button class="email-form__forget" mat-button (click)="resetPassword()">Забыли пароль?</button>
+    </div>
+    <mat-error *ngIf="userDataService.inEmailError">{{userDataService.inEmailError}}</mat-error>
 </form>
 <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
