--- a/src/app/features/login/email/email.component.scss
+++ b/src/app/features/login/email/email.component.scss
@@ -2,4 +2,12 @@
     display: flex;
     flex-direction: column;
     padding: 4rem 2rem;
+    
+    &__buttons{
+        display: flex;
+        .email-form__login-btn{
+            flex: 1 0 0;
+        }
+    }
 }
+
