feat: properties replaced to store

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 
   <div *ngIf="afAuth.authState| async as authUser">
     <img class="head__photo" [src]="authUser.photoURL?authUser.photoURL: '../assets/img/smile.jpg'" alt="" title="authUser.displayName">
-    <button mat-button [matMenuTriggerFor]="menu">{{userDataService.userName}}</button>
+    <button mat-button [matMenuTriggerFor]="menu">{{userDataService.userName$ | async}}</button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item >В кабинет</button>
         <button mat-menu-item (click)="signOut()">Выйти</button>
@@ -17,7 +17,7 @@
     <mat-error *ngIf="userDataService.logOutError">{{userDataService.logOutError}}</mat-error>
   </div>
 </header>
-<mat-progress-bar mode="query" *ngIf="userDataService.isLoading"></mat-progress-bar>
+<mat-progress-bar mode="query" *ngIf="userDataService.isLoading$ |async"></mat-progress-bar>
 
 <router-outlet></router-outlet>
 </main>  
