--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,15 +9,15 @@
 
   <div *ngIf="afAuth.authState| async as authUser">
     <img class="head__photo" [src]="authUser.photoURL?authUser.photoURL: '../assets/img/smile.jpg'" alt="" title="authUser.displayName">
-    <button mat-button [matMenuTriggerFor]="menu">{{userDataService.userName$ | async}}</button>
+    <button mat-button [matMenuTriggerFor]="menu">{{userDataFacade.userName | async}}</button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item >В кабинет</button>
         <button mat-menu-item (click)="signOut()">Выйти</button>
       </mat-menu>
-    <mat-error *ngIf="userDataService.logOutError">{{userDataService.logOutError}}</mat-error>
+    <mat-error *ngIf="userDataFacade.logOutError | async">{{userDataFacade.logOutError | async}}</mat-error>
   </div>
 </header>
-<mat-progress-bar mode="query" *ngIf="userDataService.isLoading$ |async"></mat-progress-bar>
+<mat-progress-bar mode="query" *ngIf="isLoading | async"></mat-progress-bar>
 
 <router-outlet></router-outlet>
 </main>  
