feat: request component added, store to request added, frebase remote storage added

--- a/src/app/features/user/email/email.component.html
+++ b/src/app/features/user/email/email.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]='logInForm' class="email-form">
+<form [formGroup]="logInForm" class="email-form">
     <mat-form-field>
         <mat-label >Введи Email</mat-label>
         <input matInput type="text" formControlName="email">
