--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <div class="head__logo"><a routerLink="">offerBook</a></div>
   
   <mat-button-toggle-group appearance="legacy" *ngIf="(userDataFacade.userType | async) === 'seller' " name="fontStyle" aria-label="Font Style">
-    <mat-button-toggle value="buy">Продать</mat-button-toggle>
-    <mat-button-toggle value="sell">Купить</mat-button-toggle>
+    <mat-button-toggle value="buy" routerLink="/myoffers" routerLinkActive="mat-button-toggle-checked">Продать</mat-button-toggle>
+    <mat-button-toggle value="sell" routerLink="/myrequests" routerLinkActive="mat-button-toggle-checked">Купить</mat-button-toggle>
   </mat-button-toggle-group>
 
   <div *ngIf="afAuth.authState| async as authUser">
@@ -17,7 +17,9 @@
     <mat-error *ngIf="userDataFacade.logOutError | async">{{userDataFacade.logOutError | async}}</mat-error>
   </div>
 </header>
-<mat-progress-bar mode="query" *ngIf="isLoading | async"></mat-progress-bar>
+<mat-progress-bar mode="query" *ngIf="userIsLoading | async"></mat-progress-bar>
+<mat-progress-bar mode="query" *ngIf="requestIsLoading | async"></mat-progress-bar>
 
 <router-outlet></router-outlet>
+
 </main>  
