feat; added remove userRequest and changing feature

--- a/src/app/features/offerbook/request/request.component.html
+++ b/src/app/features/offerbook/request/request.component.html
@@ -1,2 +1,4 @@
 <button mat-raised-button (click)="openDialog()">Создать запрос</button>
-<app-request-item *ngFor="let request of offerbookService.requestList$ | async"></app-request-item>
+<div class="request__list">
+    <app-request-item *ngFor="let request of offerbookService.requestList$ | async" [userRequest]="request"></app-request-item>
+</div>
