--- a/src/app/features/offerbook/request/request-change-popup/request-change-popup.component.html
+++ b/src/app/features/offerbook/request/request-change-popup/request-change-popup.component.html
@@ -1,5 +1,5 @@
-<h1 mat-dialog-title>Изменить запрос</h1>
-<div mat-dialog-content [formGroup]="requestChangeForm" (ngSubmit)="submitForm()" class="request-form">
+<h1 mat-dialog-title>Измените нужное вам поле(-я)</h1>
+<div class="request-form" mat-dialog-content [formGroup]="requestChangeForm" (ngSubmit)="submitForm()" class="request-form">
     <mat-form-field>
         <mat-label>Изменить название</mat-label>
         <input matInput
@@ -17,15 +17,24 @@
     <mat-form-field>
         <mat-label>Изменить категорию</mat-label>
         <mat-select formControlName="category">
-            <mat-option *ngFor="let category of offerbookService.categories"[value]= "category">
+            <mat-option *ngFor="let category of requestService.categories"[value]= "category">
             {{category}}
             </mat-option>
         </mat-select>
     </mat-form-field>
     <mat-form-field>
+      <mat-label>Выберите город</mat-label>
+          <mat-select formControlName="city">
+          <mat-option *ngFor="let city of cityList" [value]= "city">
+          {{city}}
+          </mat-option>
+      </mat-select>
+  </mat-form-field>
+  <mat-checkbox class="example-margin" formControlName="secondHand">можно б/у</mat-checkbox>
+    <mat-form-field>
       <ngx-mat-file-input formControlName="requestImage"
         [accept]="'.png,.jpg,.jpeg'"
-       placeholder="Выберите фото" ></ngx-mat-file-input>
+       placeholder="Выбрать другое фото" ></ngx-mat-file-input>
       <mat-icon matSuffix>folder</mat-icon>
       <mat-error *ngIf="requestChangeForm.get('requestImage').hasError('maxContentSize')">
         Размер файла не должен превышать {{requestChangeForm.get('requestImage')?.getError('maxContentSize').maxSize | byteFormat}}
@@ -33,7 +42,7 @@
         | byteFormat}}).
       </mat-error>
     </mat-form-field>
-    
+  
   </div>
   <div mat-dialog-actions>
     <button mat-button mat-dialog-close>Отменить</button>
