refactor: code cleaning + status bar to requestList in Request added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,7 @@
 </header>
 <mat-progress-bar mode="query" *ngIf="userIsLoading | async"></mat-progress-bar>
 <mat-progress-bar mode="query" *ngIf="requestIsLoading | async"></mat-progress-bar>
+<mat-progress-bar mode="query" *ngIf="offerIsLoading | async"></mat-progress-bar>
 
 <router-outlet></router-outlet>
 </main>  
