feat: filter to request added, response to offer added

--- a/src/app/app-components/popup-location/popup-location.component.html
+++ b/src/app/app-components/popup-location/popup-location.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Ваша заявка</h1>
+<h1 mat-dialog-title>Ваш город</h1>
 <div mat-dialog-content [formGroup]="locationForm" (ngSubmit)="submitForm()" class="location-form">
     <mat-form-field>
         <mat-label>Выберите город</mat-label>
