--- a/src/app/features/offerbook/offer/offer.component.html
+++ b/src/app/features/offerbook/offer/offer.component.html
@@ -1,6 +1,17 @@
-<button mat-button (click)="openDialog()">Launch dialog</button>
+<p *ngIf="offerService.SellersRequestCount$ | async as newRequests">Новых запросов: {{newRequests}}</p>
+<button mat-raised-button (click)="refreshRequestList()">Обновить</button>
+
+<button 
+    mat-button 
+    class="save-changes"
+    title="Сохранить, чтобы не получать эти запросы снова"
+    *ngIf = "offerService.IsRequestListChanging$ | async"
+    (click)="saveRejectedRequests()">
+    Сохранить изменения
+</button>
  
 <app-actual-request *ngFor="let request of offerService.actualRequest$ | async; let i = index"
     [request]="request"
-    [index]="i+1">
+    [index]="i+1"
+    >
  </app-actual-request>
