--- a/src/app/features/offerbook/request/request-change-popup/request-change-popup.component.html
+++ b/src/app/features/offerbook/request/request-change-popup/request-change-popup.component.html
@@ -45,6 +45,6 @@
   
   </div>
   <div mat-dialog-actions>
-    <button mat-button mat-dialog-close>Отменить</button>
+    <button mat-button mat-dialog-close (click)="cancelChanging()">Отменить</button>
     <button mat-raised-button mat-dialog-close type="submit" (click)="submitForm()">Принять</button>
   </div>
