--- a/src/app/features/offerbook/request/request-item/request-item.component.html
+++ b/src/app/features/offerbook/request/request-item/request-item.component.html
@@ -1,17 +1,33 @@
-<mat-card class="example-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>{{userRequest.title}}</mat-card-title>
-      <mat-card-subtitle>Категория: {{userRequest.category}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image class="example-card__image" src="{{userRequest.photos[0]}}" alt="{{userRequest.title}}">
-    <mat-card-content>
-      <p>
-        {{userRequest.description}}
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button (click)="offerbookService.deleteRequest(userRequest)">Удалить</button>
-      <button mat-button (click)="changeRequest(userRequest)">Изменить</button>
-    </mat-card-actions>
+<div class="wrapper">
+  <mat-card class="request-card"
+  [class.accepted] = "userRequest.status === requestStatus[1]">
+      <mat-card-header>
+        <div mat-card-avatar class="request-header-image"></div>
+        <mat-card-title>{{userRequest.title}}</mat-card-title>
+        <mat-card-subtitle>Категория: {{userRequest.category}}</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image class="request-card__image" src="{{userRequest.photos[0]}}" alt="{{userRequest.title}}">
+      <mat-card-content >
+        <p class="request-card__describe">
+          {{userRequest.description}}
+        </p>
+        <div>
+          <p class="request-card__offers" (click)="openOffers(userRequest.id)">
+            Предложений <span class="request-card__offers">{{offersQuantity ? offersQuantity : 'пока нет'}}</span>
+            <i *ngIf = "userRequest.newOffersToRequest">
+              Новых: <span class="request-card__new-offers">+{{userRequest.newOffersToRequest}}</span>
+            </i>
+          </p>
+          
+          <p *ngIf = "bestPrice">
+            Лучшая цена: <span class="request-card__best-price">{{bestPrice}}</span>
+          </p>
+
+        </div>
+      </mat-card-content>
+      <mat-card-actions class="request-card__actions">
+        <button class="request-card__btn" mat-button (click)="requestService.deleteRequest(userRequest)">Удалить</button>
+        <button class="request-card__btn" mat-button (click)="changeRequest(userRequest)">Изменить</button>
+      </mat-card-actions>
   </mat-card>
+</div>
