--- a/src/app/features/offerbook/offer/offer.component.html
+++ b/src/app/features/offerbook/offer/offer.component.html
@@ -1,6 +1,13 @@
 <p *ngIf="offerService.SellersRequestCount$ | async as newRequests">Новых запросов: {{newRequests}}</p>
 <button mat-raised-button (click)="refreshRequestList()">Обновить</button>
 
+<mat-button-toggle-group name="requestFilter" aria-label="Filter" [value] ="offerFacade.offerFilterName$ | async">
+    <mat-button-toggle value="all" (click) = "offerService.filterAll()">Все</mat-button-toggle>
+    <mat-button-toggle class="filter" (click) = "offerService.filterActive()" value="active">Активные</mat-button-toggle>
+    <mat-button-toggle class="filter" (click) = "offerService.filterResponsed()" value="responsed">В работе</mat-button-toggle>
+    <mat-button-toggle class="filter" (click) = "offerService.filterRejected()" value="rejected">Отклонённые</mat-button-toggle>
+
+  </mat-button-toggle-group>
 <button 
     mat-button 
     class="save-changes"
@@ -10,7 +17,7 @@
     Сохранить изменения
 </button>
  
-<app-actual-request *ngFor="let request of offerService.actualRequest$ | async; let i = index"
+<app-actual-request *ngFor="let request of offerFacade.filteredRequestList$ | async; let i = index"
     [request]="request"
     [index]="i+1"
     >
