--- a/src/app/features/offerbook/request/request.component.html
+++ b/src/app/features/offerbook/request/request.component.html
@@ -1,10 +1,10 @@
 <button mat-raised-button (click)="openDialog()">Создать запрос</button>
+<mat-button-toggle-group name="requestFilter" aria-label="Filter" [value] ="requestFacade.requestFilterName$ | async">
+    <mat-button-toggle value="all" (click) = "filterAll()">Все</mat-button-toggle>
+    <mat-button-toggle class="filter" (click) = "filterActive()" value="active">Активные</mat-button-toggle>
+    <mat-button-toggle class="filter" (click) = "filterCompleted()" value="completed">Завершённые</mat-button-toggle>
+  </mat-button-toggle-group>
 <div class="request__list">
-    <mat-button-toggle-group name="requestFilter" aria-label="Filter">
-        <mat-button-toggle value="all" (click) = "filterAll()">Все</mat-button-toggle>
-        <mat-button-toggle class="filter" (click) = "filterActive()" value="active">Активные</mat-button-toggle>
-        <mat-button-toggle class="filter" (click) = "filterCompleted()" value="completed">Завершённые</mat-button-toggle>
-      </mat-button-toggle-group>
     <app-request-item 
         *ngFor="let request of requestFacade.filteredRequestList$ | async"
         [userRequest]="request">
